@@ -8,6 +8,7 @@ Released: 2015-02-10
 ----------------------
 - Min and Max height function added
 - Windows CHMOD bug fixed
+- Systemsetting for clear thumbnail cache
 
 ---------------------
 Version: 1.0.0
